# nbcell-check-cli

./: README.md  pyproject.toml
nbcell_check_cli/: __main__.py
