[tool.poetry]
name = "nbcell-check-cli"
version = "0.1.0"
description = ""
authors = ["Ben Skubi <bskubi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
nbformat = "^5.9.2"

[tool.poetry.scripts]
nbcell-check-cli = "nbcell_check_cli.__main__:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
